appId: "CdpInspectorApp"
description: "Compare memory heap snapshots"
---
- runFlow: "shared/connect_to_sample.yaml"
- runFlow: "shared/navigate_to_memory.yaml"
- delay: "1000"
- tapOn: "#btnTakeSnapshot"
- delay: "5000"
- tapOn: "#btnTakeSnapshot"
- delay: "5000"
- tapOn: "#TabSnapshotOverview"
- delay: "1000"
- tapOn: "#btnCompareSnapshots"
- delay: "2000"
