appId: "CdpInspectorApp"
description: "E2E Test Flow for CdpInspectorApp Standard Mode Pointer/Focus Recording"
---
- runFlow: "shared/connect_to_sample.yaml"
- runFlow: "shared/navigate_to_recorder.yaml"
- tapOn: "#chkTestStudioRecordVideo"
- delay: "500"
- assertTrue: "((CdpInspectorApp.ViewModels.MainWindowViewModel)Window.DataContext).Recorder.TestStudio.IsRecordVideoEnabled == false"
- tapOn: "#chkTestStudioGenerateReports"
- delay: "500"
- assertTrue: "((CdpInspectorApp.ViewModels.MainWindowViewModel)Window.DataContext).Recorder.TestStudio.IsGenerateReportEnabled == false"
- tapOn: "#chkTestStudioRecordVideo"
- delay: "500"
- assertTrue: "((CdpInspectorApp.ViewModels.MainWindowViewModel)Window.DataContext).Recorder.TestStudio.IsRecordVideoEnabled == true"
- tapOn: "#chkTestStudioGenerateReports"
- delay: "500"
- assertTrue: "((CdpInspectorApp.ViewModels.MainWindowViewModel)Window.DataContext).Recorder.TestStudio.IsGenerateReportEnabled == true"
- tapOn: "#btnTestStudioToggleRecord"
- delay: "1000"
- assertTrue: "((CdpInspectorApp.ViewModels.MainWindowViewModel)Window.DataContext).Recorder.IsRecording == true"
- tapOn: "#btnTestStudioToggleRecord"
- delay: "1000"
- assertTrue: "((CdpInspectorApp.ViewModels.MainWindowViewModel)Window.DataContext).Recorder.IsRecording == false"
